--- a/assets/css/flightplan.css
+++ b/assets/css/flightplan.css
@@ -1,34 +1,35 @@
-﻿@font-face {
+﻿/************************************
+ Fonts
+*************************************/
+@font-face {
     font-family: JetBrainsMonoRegularNerdFontComplete;
     src: url(../../assets/fonts/JetBrainsMonoRegularNerdFontComplete.ttf);
     font-weight: bold;
-    
 }
-html,body{margin:0px; padding:0px}
-*{font-family:  JetBrainsMonoRegularNerdFontComplete,sans-serif}
 
-/*Radar*/
-.fp-radar-container {position: relative; }   
-.fp-radar-container canvas{position: absolute; background: transparent}
-.fp-radar-container #fp-radar-background-layer {background:#000}
-
+* {
+    font-family: JetBrainsMonoRegularNerdFontComplete, sans-serif
+}
 @font-face {
     font-family: 'JetBrains Mono Regular NerdFont Complete';
     font-style: normal;
     font-weight: 400;
     src: url(../fonts/JetBrainsMonoRegularNerdFontComplete.ttf);
 }
-/* ===== Scrollbar CSS ===== */
+
+/************************************
+ Scrollbar Styling
+*************************************/
 /* Firefox */
 * {
     scrollbar-width: thin;
-    scrollbar-color: #e0bb00 #000!important;
+    scrollbar-color: #e0bb00 #000 !important;
 }
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
     width: 8px;
-    height:8px;
+    height: 8px;
 }
 
 *::-webkit-scrollbar-track {
@@ -40,68 +41,87 @@ html,body{margin:0px; padding:0px}
     border-radius: 0;
     border: 0;
 }
+
+/************************************
+ Global Styling
+*************************************/
 body, html {
     font-family: 'JetBrains Mono Regular NerdFont Complete', serif;
-    font-size: 11px;
+    font-size: 13px;
     color: #adc9d7
-
 }
 
-.input-group-text {
-    border-radius: 0 !important
+.fp-card-list{
+;
 }
-
-.fp-page-btn{
-    font-size:13px;
-}
-
-
-
-
-
-
-
-
-
-
 .card, .card-header {
     border-radius: 0px;
     border-width: 2px;
 }
 
-input, textarea, button, div {
-    border-radius: 0 !important
-}
 
-button {
-    border-width: 1px !important
-}
-
-#fp-page-nav div button {width:6rem !important}
-
-/* Additional styling for the clock and task cards */
-.clock {
-    font-size: 1.5rem;
-}
-.task-card {
-    margin-bottom: 1rem;
-    padding: 1rem;
-    border-bottom: 1px solid #adc9d7;
-
+/************************************
+Layout
+*************************************/
+.unused-bar {
+    height: 100%;
 }
 .radar-view {
     height: 100%;
 }
-.unused-bar {
-    height: 100%;
-}
-.info-slot {
-    font-size: 1rem;
-}
 .full-page {
     min-height: 100vh; /* Ensure the full height of the viewport */
 }
+
 .main-container {
     height: calc(100vh - 56px); /* Subtract the top bar height */
     overflow: auto;
+}
+
+/************************************
+ Header/Navbar
+*************************************/
+.clock {
+    font-size: 30px;
+    flex-grow:0;
+    text-align: center;
+    padding-top:4px !important;
+}
+
+.clock span {font-size:30px;}
+.info-slot {
+    
+    font-size: 1rem;
+    border-right:1px solid #adc9d7;
+    border-bottom:1px solid #adc9d7;
+    min-height: 40px;
+    width:150px;
+    padding: 0 2px 2px;
+    flex-grow: 1;
+}
+nav { padding:0px !important}
+.navbar-brand {font-size:1.5rem}
+
+
+.task-card {
+    padding:5px;
+    
+    border-bottom: 1px solid #3c4349;
+}
+
+
+/************************************
+ Radar
+*************************************/
+
+
+.fp-radar-container {
+    position: relative;
+}
+.fp-radar-container canvas {
+    position: absolute;
+    background: transparent
+}
+.fp-radar-container #fp-radar-background-layer {
+    background: #000
 }
