--- a/assets/css/flightplan.css
+++ b/assets/css/flightplan.css
@@ -64,7 +64,7 @@ body, html {
 Layout
 *************************************/
 .unused-bar {
-    height: 100%;
+    /*height: 100%;*/
 }
 .radar-view {
     height: 100%;
